# HRLA_EDF

./: Algorithm.py  AnalyzeHRLA.py  BM_2Dcuts.py  BM_3D.py  BM_complete.py  BM_heatmaps.py  BM_nonconv.py  BMf_w_sh_mc.py  BasicModel.py  BasicModel_1Dcuts.py  BasicModel_HRLA.py  BasicModel_determ.py  BasicModel_revcontr.py  BasicModel_tables.py  Basicmodeld4.py  Basicmodeld41Dcuts.py  Basicmodeld6_fix+weights.py  Basicmodeld6fixprices.py  ConShift.py  ConShift_postprocessing.py  Disutilities.py  Disutilities_postprocessing.py  FixedPrices.py  FixedPrices_postprocessing.py  FixedPrices_tables.py  GreenComp.py  GreenComp_KvsRev.py  GreenComp_postprocessing.py  MC_heatmap.py  Model_complete_profit.py  Model_nogreen_profit.py  Modeld41Dcuts.py  MultComp_ResBill.py  MultComp_ResBill_1Dcutspy  MultComp_tables.py  Optimalfinder(rev).py  Optimalprofitfinder.py  Weights.py  Weights_tables.py  __init__.py  (+9 more)
GlobalOptimizationHRLA/: Schedulers.py
PostProcessing/: Comparator.py  PostProcessor.py  __init__.py  plot_empirical_probabilities.py
tests/: BM_CMA.py  BM_Flat.py  BM_HRLA.py  BM_KvsRev.py  BM_KvsRev_ANDzoomed.py  BM_Kvsrev.py  BM_LBFGSB.py  BM_SHGO.py  BM_aVSrev.py  BM_aVSrev_alsozoomed.py  BM_basincheck.py  BM_basinhopping.py  BM_bestrevandcontract.py  BM_betavsrev.py  BM_diffevo.py  BM_findingamax.py  BM_fullcomp.py  BM_globalsolcheck.py  BM_hstepsizecomparison.py  BM_linearscheduler.py  BM_meanval.py  BM_runMexperiments.py  BM_testamin.py  BasicModel.py  BasicModel_betavsrev.py  BasicModel_coupleddecay.py  BasicModel_cubic.py  BasicModel_gradientdecent.py  ConShift.py  (+38 more)
(+119 files in other folders)
