[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GlobalOptimizationHRLA"
version = "1.1.0"
authors = [
  { name="Daniel Cortild", email="d.cortild@rug.nl" },
]
description = "A package to solve global optimization problems in small dimensions. The method is based on sampling algorithms, and specifically implements the high-resolution Langevin algorithm."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'matplotlib',
    'tqdm',
    'multiprocess',
    'dill',
    'matplotlib',
    'tabulate',
    'sympy'
  ]

[project.urls]
"Homepage" = "https://github.com/DanielCortild/Global-Optimization"
"Bug Tracker" = "https://github.com/DanielCortild/Global-Optimization/issues"

[options]
install_requires = [
    'numpy',
    'matplotlib',
    'tqdm',
    'multiprocess',
    'dill',
    'matplotlib',
    'tabulate',
    'sympy'
  ]
setup_requires = [
    'numpy',
    'matplotlib',
    'tqdm',
    'multiprocess',
    'dill',
    'matplotlib',
    'tabulate',
    'sympy'
  ]
